# hnswlib-wasm

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
test/: BruteforceSearch.test.js  HierarchicalNSW.test.js  HnswlibModule.test.js  InnerProductSpace.test.js  L2Space.test.js
